2007-06-06  Francis Lachapelle <flachapelle@inverse.ca>

	* SoObjects/SOGo/NSNumber+Utilities.m: initial import.
	* SoObjects/SOGo/NSNull+Utilities.m: initial import.
	* UI/Scheduler/UIxCalTasksListView.m ([WOResponse -tasksListAction]): 
	new method that returns a json-formatted array of the visible tasks
	for the current user.

2007-06-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentObject.m: the owner of the
	object must be present in the list of UIDs we delete the object
	from. Otherwise Calendar objects having no organizer and no
	attendees will remain in their owner's Calendar.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject
	-_urlPreferringParticle:expectedoverThisOne:possible]): remove the
	first 3 elements of the path array if the url returned by
	baseURLInContext: returns a hostname.

	* SoObjects/Mailer/SOGoMailFolder.m ([SOGoMailFolder
	-_adjustOwner]): sharedFolderName and otherUsersFolderName may be
	nil, in which case a crash happens when calling hasPrefix:.
	([SOGoMailFolder -_sharesACLs]): same as above.
	([SOGoMailFolder -otherUsersPathToFolder]): same as above. If
	otherUsersFolderName is nil, we return nil.
	([SOGoMailFolder -httpURLForAdvisoryToUser:uid]): if we receive
	nil from [self otherUsersPathToFolder], we return nil too.

2007-06-01  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject
	-_urlPreferringParticle:expectedoverThisOne:possible]): unescape
	the result of [self baseURLInContext:] to avoid a double escaping
	in the resulting string.

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder -aclsForUser:uid]): if
	the user has the "ObjectReader" role on the parent container, then
	he is granted the "ObjectViewer" role on this object. Same for
	"ObjectEraser", although this might change later.

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor
	-toolbar]): determine the toolbar filename based on the
	permissions declared by the securitymanager. The role mechanism