@@ -10,14 +10,9 @@
   className="UIxComponentEditor"
   var:component="event"
   var:saveURL="saveURL">
-  <!-- <label><span id="allDay" class="content"><input class="checkBox"
-        type="checkbox" var:selection="isAllDay"
-        var:checked="isAllDay"
-        /><var:string label:value="All day Event"
-        /></span></label> -->
   <label><span id="allDay" class="content"><input class="checkBox"
         type="checkbox" var:selection="isAllDay"
-        const:disabled="1"
+        var:checked="isAllDay"
         /><var:string label:value="All day Event"
         /></span></label>
   <span class="checkBoxList"><var:string label:value="Start:" />
